; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Num.c_Float_Cmp.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Num.c_Float_Cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @Float_Cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Float_Cmp(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca double, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call double @Float_C_Float(i32 %6)
  %8 = load i32, i32* %4, align 4
  %9 = call double @c_float(i32 %8)
  %10 = fsub double %7, %9
  store double %10, double* %5, align 8
  %11 = load double, double* %5, align 8
  %12 = fcmp ogt double %11, 0.000000e+00
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  br label %19

14:                                               ; preds = %2
  %15 = load double, double* %5, align 8
  %16 = fcmp olt double %15, 0.000000e+00
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i32 -1, i32 0
  br label %19

19:                                               ; preds = %14, %13
  %20 = phi i32 [ 1, %13 ], [ %18, %14 ]
  ret i32 %20
}

declare dso_local double @Float_C_Float(i32) #1

declare dso_local double @c_float(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
